# In-search-of-a-better-repo

./: .gitignore  PROJECT_MEMORY.md  README.md  push_to_github.py  sync_to_repo.py
configurations/: README.md  settings.json
configurations/environment/: README.md
configurations/hooks/: change-logger.py  dangerous-command-blocker.py  obsidian-session-logger.py  repo-sync.py  secret-scanner.py
configurations/settings-templates/: settings_template_node1.json  settings_template_node2.json  settings_template_node3.json
docs/: README.md
modules/: README.md  azure_diagrams.py  docx_beautify.py
modules/mcp-servers/pbi-semantic/: pyproject.toml
modules/mcp-servers/pbi-semantic/data/: datasets.yaml  dax_examples.yaml  glossary.yaml
modules/mcp-servers/pbi-semantic/data/streams/: so_backlog.yaml
modules/mcp-servers/pbi-semantic/src/pbi_semantic_mcp/: __init__.py  __main__.py  client.py  config.py  guardrails.py  server.py
modules/mcp-servers/pbi-semantic/src/pbi_semantic_mcp/metadata/: __init__.py  loader.py  models.py  registry.py
modules/mcp-servers/pbi-semantic/src/pbi_semantic_mcp/tools/: __init__.py  datasets.py  measures.py  query.py
modules/mcp-servers/pbi-semantic/tests/: conftest.py  test_guardrails.py  test_metadata_loader.py
research/: README.md
research/learnings/: README.md
research/memory/: MEMORY.md  feedback_arrow_direction.md  feedback_diagram_quality_gate.md  feedback_diagram_visual_standard.md  feedback_git_push_ssl.md  feedback_o365_user.md  feedback_pbi_underlyingtype.md  feedback_pptx_layout.md  (+36 more)
skills/: README.md
(+153 files in other folders)
